--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: CI Pipeline
 
 on:
-  pull_request:
+  push:
     branches:
-      - main
+      - main # Trigger on push to the main branch
 
 jobs:
   lint-check:
@@ -27,3 +27,35 @@ jobs:
       # Step 4: Run ESLint
       - name: Run ESLint
         run: npm run lint
+
+  docker-build-push:
+    runs-on: ubuntu-latest
+    needs: lint-check # Ensure linting happens before Docker build
+
+    steps:
+      # Step 1: Check out the code
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Step 2: Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Step 3: Log in to Amazon ECR
+      - name: Log in to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
+
+      # Step 4: Build the Docker image
+      - name: Build Docker image
+        run: |
+          docker build -t my-app:${{ github.sha }} .
+
+      # Step 5: Tag Docker image for ECR
+      - name: Tag Docker image
+        run: |
+          docker tag my-app:${{ github.sha }} ${{ secrets.AWS_ACCESS_KEY_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-app-repo:${{ github.sha }}
+
+      # Step 6: Push Docker image to ECR
+      - name: Push Docker image to ECR
+        run: |
+          docker push ${{ secrets.AWS_ACCESS_KEY_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-app-repo:${{ github.sha }}
