fixed aws region issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,9 +53,9 @@ jobs:
       # Step 5: Tag Docker image for ECR
       - name: Tag Docker image
         run: |
-          docker tag my-app:${{ github.sha }} ${{ secrets.AWS_ACCESS_KEY_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-app-repo:${{ github.sha }}
+          docker tag nodejs-server-devops:${{ github.sha }} 508314231726.dkr.ecr.ap-south-1.amazonaws.com/nodejs-server-devops:${{ github.sha }}
 
       # Step 6: Push Docker image to ECR
       - name: Push Docker image to ECR
         run: |
-          docker push ${{ secrets.AWS_ACCESS_KEY_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-app-repo:${{ github.sha }}
+          docker push 508314231726.dkr.ecr.ap-south-1.amazonaws.com/nodejs-server-devops:${{ github.sha }}
